--- a/app-config.yaml
+++ b/app-config.yaml
@@ -3,7 +3,7 @@ app:
   baseUrl: http://localhost:3000
 
 organization:
-  name: My Company
+  name: TeamDeck
 
 backend:
   # Used for enabling authentication, secret is shared by all backend plugins
@@ -28,8 +28,15 @@ backend:
   # This is for local development only, it is not recommended to use this in production
   # The production database configuration is stored in app-config.production.yaml
   database:
-    client: better-sqlite3
-    connection: ':memory:'
+    # client: better-sqlite3
+    # connection: ':memory:'
+      client: pg
+      connection:
+        host: localhost
+        port: 5432
+        user: postgres
+        password: default
+        database: teamdeck
   # workingDirectory: /tmp # Use this to configure a working directory for the scaffolder, defaults to the OS temp-dir
 
 integrations:
@@ -62,11 +69,37 @@ techdocs:
   publisher:
     type: 'local' # Alternatives - 'googleGcs' or 'awsS3'. Read documentation for using alternatives.
 
+# auth:
+#   # see https://backstage.io/docs/auth/ to learn about auth providers
+#   providers:
+#     # See https://backstage.io/docs/auth/guest/provider
+#     guest: {}
+
 auth:
   # see https://backstage.io/docs/auth/ to learn about auth providers
+  environment: development
   providers:
     # See https://backstage.io/docs/auth/guest/provider
     guest: {}
+    github:
+      development:
+        clientId: Ov23liDYdiMvIgm8v4nj
+        clientSecret: 253e34e36cf7ff62c504a94983442eb5d17f9912
+        apps:
+          - $include: github-app-backstage-teamdeck-rgt-devops-credentials.yaml
+        signIn:
+          resolvers:
+            # Matches the GitHub username with the Backstage user entity name.
+            # See https://backstage.io/docs/auth/github/provider#resolvers for more resolvers.
+            - resolver: usernameMatchingUserEntityName
+    # githubOrg:
+    #   id: production
+    #   githubUrl: https://github.com
+    #   orgs: ['RGT-DevOps']
+    #   schedule:
+    #     initialDelay: { seconds: 30 }
+    #     frequency: { hours: 1 }
+    #     timeout: { minutes: 50 }
 
 scaffolder:
   # see https://backstage.io/docs/features/software-templates/configuration for software template options
