--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -52,7 +52,8 @@
     "pg": "^8.11.3"
   },
   "devDependencies": {
-    "@backstage/cli": "^0.34.0"
+    "@backstage/cli": "^0.34.0",
+    "dotenv": "^17.2.2"
   },
   "files": [
     "dist"
