--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -21,6 +21,7 @@
     "@backstage/plugin-app-backend": "^0.5.5",
     "@backstage/plugin-auth-backend": "^0.25.3",
     "@backstage/plugin-auth-backend-module-github-provider": "^0.3.6",
+    "@backstage/plugin-auth-backend-module-google-provider": "^0.3.7",
     "@backstage/plugin-auth-backend-module-guest-provider": "^0.2.11",
     "@backstage/plugin-auth-node": "^0.6.6",
     "@backstage/plugin-catalog-backend": "^3.0.1",
