--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "node": "20 || 22"
   },
   "scripts": {
-    "start": "backstage-cli repo start",
-    "build:backend": "yarn workspace backend build",
-    "build:all": "backstage-cli repo build --all",
-    "build-image": "yarn workspace backend build-image",
+    "start": "dotenv -e .env -- backstage-cli repo start",
+    "build:backend": "dotenv -e .env -- yarn workspace backend build",
+    "build:all": "dotenv -e .env -- backstage-cli repo build --all",
+    "build-image": "dotenv -e .env -- yarn workspace backend build-image",
     "tsc": "tsc",
     "tsc:full": "tsc --skipLibCheck false --incremental false",
     "clean": "backstage-cli repo clean",
