--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -43,7 +43,9 @@
     "@backstage/theme": "^0.6.8",
     "@backstage/ui": "^0.7.0",
     "@material-ui/core": "^4.12.2",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@material-ui/icons": "^4.9.1",
+    "@internal/plugin-github-access": "^0.1.0",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
     "react-router": "^6.3.0",
